<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"


    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src ="@drawable/bruno_liljefors_1909"
        android:contentDescription = "@null"
        />

    <TextView
        android:id="@+id/title"
        android:text="@string/fox_in_the_forest"
        style="@style/title" />

    <Button
        android:id="@+id/resetButton"
        android:onClick="resetGame"
        android:text="@string/new_ngame"
        style="@style/reset" />

    <TextView
        android:id="@+id/mssg"
        android:text="@string/good_luck"
        style="@style/mssg" />

    <LinearLayout
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:contentDescription = "@string/player_a_scoring"
        style="@style/score_column">

        <TextView
            android:id="@+id/player_a_name"
            android:text="@string/player_a"
            style="@style/player_name" />

        <TextView
            android:id="@+id/player_a_score"
            android:text="@string/_0"

            style="@style/score" />

        <Button
            android:id="@+id/humbleA"
            android:onClick="scoreTeamA"
            android:text="@string/_0_3_tricks"
            android:contentDescription = "@string/_0_3_tricks"
            style="@style/score_button" />
        <Button
            android:id="@+id/defeat1A"
            android:onClick="scoreTeamA"
            android:text="@string/_4_tricks"
            android:contentDescription = "@string/_4_tricks"
            style="@style/score_button" />
        <Button
            android:id="@+id/defeat2A"
            android:onClick="scoreTeamA"
            android:text="@string/_5_tricks"
            android:contentDescription = "@string/_5_tricks"
            style="@style/score_button" />

        <Button
            android:id="@+id/defeat3A"
            android:onClick="scoreTeamA"
            android:text="@string/_6_tricks"
            android:contentDescription = "@string/_6_tricks"
            style="@style/score_button" />

        <Button
            android:id="@+id/victoryA"
            android:onClick="scoreTeamA"
            android:text="@string/_7_9_tricks"
            android:contentDescription = "@string/_7_9_tricks"
            style="@style/score_button" />

        <Button
            android:id="@+id/greedyA"
            android:onClick="scoreTeamA"
            android:text="@string/_10_tricks"
            android:contentDescription = "@string/_10_tricks"
            style="@style/score_button" />

    </LinearLayout>


    <LinearLayout
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:contentDescription = "@string/player_b_scoring"
        style="@style/score_column">
        <TextView
            android:id="@+id/player_b_name"
            android:text="@string/player_b"
            style="@style/player_name" />
        <TextView
            android:id="@+id/player_b_score"
            android:text="@string/_0"
            style="@style/score" />

        <Button
            android:id="@+id/humbleB"
            android:onClick="scoreTeamB"
            android:text="@string/_0_3_tricks"
            android:contentDescription = "@string/_0_3_tricks"
            style="@style/score_button" />
        <Button
            android:id="@+id/defeat1B"
            android:onClick="scoreTeamB"
            android:text="@string/_4_tricks"
            android:contentDescription = "@string/_4_tricks"
            style="@style/score_button" />
        <Button
            android:id="@+id/defeat2B"
            android:onClick="scoreTeamB"
            android:text="@string/_5_tricks"
            android:contentDescription = "@string/_5_tricks"
            style="@style/score_button" />

        <Button
            android:id="@+id/defeat3B"
            android:onClick="scoreTeamB"
            android:text="@string/_6_tricks"
            android:contentDescription = "@string/_6_tricks"
            style="@style/score_button" />
        <Button
            android:id="@+id/victoryB"
            android:onClick="scoreTeamB"
            android:text="@string/_7_9_tricks"
            android:contentDescription = "@string/_7_9_tricks"
            style="@style/score_button" />
        <Button
            android:id="@+id/greedyB"
            android:onClick="scoreTeamB"
            android:text="@string/_10_tricks"
            android:contentDescription = "@string/_10_tricks"
            style="@style/score_button" />

    </LinearLayout>

</RelativeLayout>